force-app/main/default/objects/Account/fields/CampoNoVacio__c.field-meta.xml
<CustomField>
    <fullName>CampoNoVacio__c</fullName>
    <formula>OR(
ISBLANK( ZF_Cliente_ID__c ),
ZF_Cliente_ID__c &lt;&gt; 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CampoNoVacio</label>
    <type>Checkbox</type>
</CustomField>