force-app/main/default/objects/Account/fields/ClasificacionCliente__c.field-meta.xml
<CustomField>
    <fullName>ClasificacionCliente__c</fullName>
    <label>Clasificacion de cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAA</fullName>
            </value>
            <value>
                <fullName>ABA</fullName>
            </value>
            <value>
                <fullName>CCA</fullName>
            </value>
            <value>
                <fullName>NVO</fullName>
            </value>
            <value>
                <fullName>ADA</fullName>
            </value>
            <value>
                <fullName>AAC</fullName>
            </value>
            <value>
                <fullName>ACA</fullName>
            </value>
            <value>
                <fullName>AAB</fullName>
            </value>
            <value>
                <fullName>ADB</fullName>
            </value>
            <value>
                <fullName>BAA</fullName>
            </value>
            <value>
                <fullName>BAC</fullName>
            </value>
            <value>
                <fullName>BDA</fullName>
            </value>
            <value>
                <fullName>BAB</fullName>
            </value>
            <value>
                <fullName>BBA</fullName>
            </value>
            <value>
                <fullName>BCA</fullName>
            </value>
            <value>
                <fullName>CBA</fullName>
            </value>
            <value>
                <fullName>CDA</fullName>
            </value>
            <value>
                <fullName>CAB</fullName>
            </value>
            <value>
                <fullName>CAC</fullName>
            </value>
            <value>
                <fullName>CBB</fullName>
            </value>
            <value>
                <fullName>CBC</fullName>
            </value>
            <value>
                <fullName>CDB</fullName>
            </value>
            <value>
                <fullName>DDD</fullName>
            </value>
            <value>
                <fullName>ABB</fullName>
            </value>
            <value>
                <fullName>ABC</fullName>
            </value>
            <value>
                <fullName>ACB</fullName>
            </value>
            <value>
                <fullName>ACC</fullName>
            </value>
            <value>
                <fullName>BBB</fullName>
            </value>
            <value>
                <fullName>BBC</fullName>
            </value>
            <value>
                <fullName>BCB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>