force-app/main/default/objects/Account/fields/ClientePrioritario__c.field-meta.xml
<CustomField>
    <fullName>ClientePrioritario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente Prioritario</label>
    <type>Checkbox</type>
</CustomField>