force-app/main/default/objects/Account/fields/Credito_Disponible__c.field-meta.xml
<CustomField>
    <fullName>Credito_Disponible__c</fullName>
    <description>Crédito disponible sincronizado desde Zafiro.</description>
    <label>Crédito Disponible (Zafiro)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>