force-app/main/default/objects/Account/fields/Geocodigo__c.field-meta.xml
<CustomField>
    <fullName>Geocodigo__c</fullName>
    <label>Geocódigo</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>