force-app/main/default/objects/Account/fields/Limite_de_Credito__c.field-meta.xml
<CustomField>
    <fullName>Limite_de_Credito__c</fullName>
    <description>Límite de crédito sincronizado desde Zafiro.</description>
    <label>Límite de Crédito (Zafiro)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>