force-app/main/default/objects/Account/fields/LimitedeCredito__c.field-meta.xml
<CustomField>
    <fullName>LimitedeCredito__c</fullName>
    <label>Límite de Crédito</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>