force-app/main/default/objects/Account/fields/ListadePrecio__c.field-meta.xml
<CustomField>
    <fullName>ListadePrecio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lista de precios asociados a esta Cuenta.</inlineHelpText>
    <label>Lista de Precio</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>