force-app/main/default/objects/Account/fields/Maildecontacto__c.field-meta.xml
<CustomField>
    <fullName>Maildecontacto__c</fullName>
    <label>Mail de contacto</label>
    <type>Email</type>
</CustomField>