force-app/main/default/objects/Account/fields/MailTotales__c.field-meta.xml
<CustomField>
    <fullName>MailTotales__c</fullName>
    <label>Mail Totales</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>