force-app/main/default/objects/Account/fields/NumerodeCuenta__c.field-meta.xml
<CustomField>
    <fullName>NumerodeCuenta__c</fullName>
    <externalId>true</externalId>
    <label>Número de Cuenta</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>