force-app/main/default/objects/Account/fields/Plazo_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Plazo_de_Pago__c</fullName>
    <description>Plazo de pago sincronizado desde Zafiro.</description>
    <label>Plazo de Pago (Zafiro)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>