force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Puebla</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Veracruz Sucursal</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Tepeaca</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Chignahuapan</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Atlixco</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Estado de Mexico</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Pachuca</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Tulancingo</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Poza Rica</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Cuernavaca</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Acapulco</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Veracruz</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Oaxaca</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Villahermosa</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Monterrey</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Tlaxcala</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Cd. Sahagun</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Queretaro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>