force-app/main/default/objects/Account/fields/RFC__c.field-meta.xml
<CustomField>
    <fullName>RFC__c</fullName>
    <inlineHelpText>Debe ser en Mayuscula</inlineHelpText>
    <label>RFC</label>
    <length>13</length>
    <required>true</required>
    <type>Text</type>
</CustomField>