force-app/main/default/objects/Account/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <description>Saldo sincronizado desde Zafiro.</description>
    <label>Saldo (Zafiro)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>