force-app/main/default/objects/Account/fields/Segmento__c.field-meta.xml
<CustomField>
    <fullName>Segmento__c</fullName>
    <label>Segmento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industria</fullName>
            </value>
            <value>
                <fullName>Corporativo</fullName>
            </value>
            <value>
                <fullName>Subdistribuidor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>