force-app/main/default/objects/Account/fields/Territorio__c.field-meta.xml
<CustomField>
    <fullName>Territorio__c</fullName>
    <label>Territorio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monterrey</fullName>
            </value>
            <value>
                <fullName>Puebla</fullName>
            </value>
            <value>
                <fullName>Veracruz</fullName>
            </value>
            <value>
                <fullName>Veracruz Sucursal</fullName>
            </value>
            <value>
                <fullName>Tepeaca</fullName>
            </value>
            <value>
                <fullName>Chignahuapan</fullName>
            </value>
            <value>
                <fullName>Atlixco</fullName>
            </value>
            <value>
                <fullName>Estado de Mexico</fullName>
            </value>
            <value>
                <fullName>Pachuca</fullName>
            </value>
            <value>
                <fullName>Tulancingo</fullName>
            </value>
            <value>
                <fullName>Poza Rica</fullName>
            </value>
            <value>
                <fullName>Cuernavaca</fullName>
            </value>
            <value>
                <fullName>Acapulco</fullName>
            </value>
            <value>
                <fullName>Oaxaca</fullName>
            </value>
            <value>
                <fullName>Villahermosa</fullName>
            </value>
            <value>
                <fullName>Tlaxcala</fullName>
            </value>
            <value>
                <fullName>Cd. Sahagun</fullName>
            </value>
            <value>
                <fullName>Queretaro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>