force-app/main/default/objects/Account/fields/TipodeCliente__c.field-meta.xml
<CustomField>
    <fullName>TipodeCliente__c</fullName>
    <label>Tipo de Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporativos</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>subdistribuidor</fullName>
            </value>
            <value>
                <fullName>Tienda</fullName>
            </value>
            <value>
                <fullName>Atencion a Clientes</fullName>
            </value>
            <value>
                <fullName>Proyectos</fullName>
            </value>
            <value>
                <fullName>AAA</fullName>
            </value>
            <value>
                <fullName>ABA</fullName>
                <isActive>false</isActive>
                <label>ABA</label>
            </value>
            <value>
                <fullName>CCA</fullName>
                <isActive>false</isActive>
                <label>CCA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>