force-app/main/default/objects/Account/fields/TipodeCuenta__c.field-meta.xml
<CustomField>
    <fullName>TipodeCuenta__c</fullName>
    <label>Tipo de Cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Moral</fullName>
            </value>
            <value>
                <fullName>Física</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>