force-app/main/default/objects/Account/fields/TipoVenta__c.field-meta.xml
<CustomField>
    <fullName>TipoVenta__c</fullName>
    <label>Tipo de Venta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contado</fullName>
            </value>
            <value>
                <fullName>Crédito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>