force-app/main/default/objects/Account/fields/Usar_Direccion_de_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>Usar_Direccion_de_Facturacion__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Si se selecciona, permite duplicar los datos de la dirección de facturación, en la dirección de envió.</description>
    <label>Usar Dirección de Facturación</label>
    <type>Checkbox</type>
</CustomField>