force-app/main/default/objects/Account/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <label>Vendedor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>027 Corp simec</fullName>
            </value>
            <value>
                <fullName>03 Corp Puebla</fullName>
            </value>
            <value>
                <fullName>022 corp Monterrey</fullName>
            </value>
            <value>
                <fullName>025 Corp Veracruz</fullName>
            </value>
            <value>
                <fullName>033 Mostrdor Veracruz</fullName>
            </value>
            <value>
                <fullName>045 Ind Veracruz</fullName>
            </value>
            <value>
                <fullName>R-34 Pachuca</fullName>
            </value>
            <value>
                <fullName>Ruta Bajio</fullName>
            </value>
            <value>
                <fullName>026 Corp Gerdau</fullName>
            </value>
            <value>
                <fullName>Ruta Oaxaca-Chiapas</fullName>
            </value>
            <value>
                <fullName>Ruta Ver-Tabasco,</fullName>
            </value>
            <value>
                <fullName>Ruta Peninsula</fullName>
            </value>
            <value>
                <fullName>022 VENTAS CORP MONTERREY</fullName>
            </value>
            <value>
                <fullName>025 VENTAS CORP. VERACRUZ</fullName>
            </value>
            <value>
                <fullName>037 RUTA ZONA DEL NORTE</fullName>
            </value>
            <value>
                <fullName>MOSTRADOR02</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>