force-app/main/default/objects/Account/fields/ZF_Cliente_ID__c.field-meta.xml
<CustomField>
    <fullName>ZF_Cliente_ID__c</fullName>
    <externalId>true</externalId>
    <label>Id de Cuenta Zafiro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>