force-app/main/default/objects/Account/fields/Zona__c.field-meta.xml
<CustomField>
    <fullName>Zona__c</fullName>
    <label>Zona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Centro</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Norte</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Sureste</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>