force-app/main/default/objects/Account/recordTypes/Proveedor.recordType-meta.xml
<RecordType>
    <fullName>Proveedor</fullName>
    <active>true</active>
    <label>Proveedor</label>
</RecordType>