force-app/main/default/objects/Account/validationRules/Regla_Tipo_de_Venta.validationRule-meta.xml
<ValidationRule>
    <fullName>Regla_Tipo_de_Venta</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    RecordTypeName__c = &quot;Cliente&quot;,
    NOT(
        OR(
            TipoVenta__c = &quot;Credito&quot;,
            TipoVenta__c = &quot;Contado&quot;
        )
    )
)</errorConditionFormula>
    <errorDisplayField>TipoVenta__c</errorDisplayField>
    <errorMessage>&quot;El campo Tipo de Venta solo puede tener los valores &apos;Credito&apos; o &apos;Contado&apos;.&quot;</errorMessage>
</ValidationRule>