force-app/main/default/objects/Account/validationRules/Validacion_RFC_Mayuscula.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_RFC_Mayuscula</fullName>
    <active>true</active>
    <description>Validacion para que el campo solo permita valores en mayúsculas.</description>
    <errorConditionFormula>RFC__c &lt;&gt; UPPER(RFC__c)</errorConditionFormula>
    <errorMessage>El campo solo permite valores en mayúsculas.</errorMessage>
</ValidationRule>